--- a/main_CSL_graph_classification.ipynb
+++ b/main_CSL_graph_classification.ipynb
@@ -108,13 +108,21 @@
     "    IMPORTING CUSTOM MODULES/METHODS\n",
     "\"\"\"\n",
     "\n",
-    "from nets.CSL_graph_classification.load_net import gnn_model # import GNNs\n",
-    "from data.data import LoadData # import dataset"
+    "from nets.CSL_graph_classification.load_net import gnn_model # import GNNs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.data import LoadData # import dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,9 +158,9 @@
      "text": [
       "[I] Loading data (notebook) ...\n",
       "[I] Preparing Circular Skip Link Graphs v4 ...\n",
-      "[I] Finished preparation after 0.1282s\n",
+      "[I] Finished preparation after 0.1514s\n",
       "[!] Dataset:  CSL\n",
-      "Time taken: 0.1386s\n",
+      "Time taken: 0.1835s\n",
       "[I] Finished loading.\n"
      ]
     }
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,14 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -589,17 +590,17 @@
       "Clean main_CSL_graph_classification.py\n",
       "Done. \n",
       "[I] Preparing Circular Skip Link Graphs v4 ...\n",
-      "[I] Finished preparation after 0.1407s\n",
+      "[I] Finished preparation after 0.1467s\n",
       "[!] Dataset:  CSL\n",
-      "Time taken: 0.1521s\n",
+      "Time taken: 0.1613s\n",
       "cuda not available\n",
       "MODEL DETAILS:\n",
       "\n",
       "MODEL/Total parameters: 3WLGNN 102054\n",
       "[I] Preparing Circular Skip Link Graphs v4 ...\n",
-      "[I] Finished preparation after 0.1089s\n",
+      "[I] Finished preparation after 0.1694s\n",
       "[!] Dataset:  CSL\n",
-      "Time taken: 0.1152s\n",
+      "Time taken: 0.1802s\n",
       "[!] Adding graph positional encoding.\n"
      ]
     },
@@ -607,6 +608,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/anaconda3/envs/benchmark_gnn/lib/python3.7/site-packages/dgl/base.py:25: UserWarning: Currently adjacency_matrix() returns a matrix with destination as rows by default.  In 0.5 the result will have source as rows (i.e. transpose=True)\n",
+      "  warnings.warn(msg, warn_type)\n",
       "Epoch 0:   0%|          | 0/1000 [00:00<?, ?it/s]"
      ]
     },
@@ -625,7 +628,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0:   0%|          | 0/1000 [00:02<?, ?it/s]"
+      "Epoch 101:  10%|█         | 101/1000 [21:52<3:14:39, 12.99s/it, lr=5e-5, test_acc=6.67, time=15, train_acc=98.9, train_loss=1.36, val_acc=0.1, val_loss=2.3]    "
      ]
     },
     {
@@ -634,8 +637,8 @@
      "text": [
       "-----------------------------------------------------------------------------------------\n",
       "Exiting from training early because of KeyboardInterrupt\n",
-      "TOTAL TIME TAKEN: 0.0011hrs\n",
-      "AVG TIME PER EPOCH: nans\n",
+      "TOTAL TIME TAKEN: 0.3652hrs\n",
+      "AVG TIME PER EPOCH: 12.8822s\n",
       "\n",
       "\n",
       "\n",
@@ -660,7 +663,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "\n",
+      "/anaconda3/envs/benchmark_gnn/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
+      "  out=out, **kwargs)\n",
+      "/anaconda3/envs/benchmark_gnn/lib/python3.7/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "/anaconda3/envs/benchmark_gnn/lib/python3.7/site-packages/numpy/core/_methods.py:140: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  keepdims=keepdims)\n",
+      "/anaconda3/envs/benchmark_gnn/lib/python3.7/site-packages/numpy/core/_methods.py:110: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  arrmean, rcount, out=arrmean, casting='unsafe', subok=False)\n",
+      "/anaconda3/envs/benchmark_gnn/lib/python3.7/site-packages/numpy/core/_methods.py:132: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
      ]
     }
    ],
